styles: fix overflow scrollbar in move list

--- a/frontend/src/app/presentation/components/chess-move-list/chess-move-list.component.css
+++ b/frontend/src/app/presentation/components/chess-move-list/chess-move-list.component.css
@@ -2,7 +2,7 @@
   height: 100%;
   min-height: var(--chess-side-h);
   max-height: var(--chess-side-h);
-  overflow-y: scroll;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
   scrollbar-width: thin;
